--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
+
+
 <html lang="en">
 
 <head>
@@ -10,6 +12,6 @@
 <body>
     <h1>Welcome!</h1>
     <p>To a very simple static html page for testing Amplify hosting</p>
-</body>
+    <p>Guid: 614e90cd-0bc8-47c7-807e-aae74c7210f1</p></body>
 
 </html>
